# AeroAgent

./: .gitignore  README.md  pyproject.toml  requirements.txt
aiops/: cli.py  config.py
aiops/agents/: agents.py  core.py
aiops/alerting/: alerts.py
aiops/ingestion/: data_sources.py
aiops/optimization/: schedulers.py
aiops/orchestrator/: pipeline.py  sim.py
aiops/prediction/: models.py
aiops/ui/: app.py
aiops/utils/: logging.py
tests/: test_smoke.py
