[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiops-workflow"
version = "0.1.0"
description = "Mini AI workflow for airport operations (runway + gate scheduling)"
authors = [{name = "Your Name"}]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.25.0",
    "scikit-learn>=1.3.0",
    "pulp>=2.8.0",
    "click>=8.1.7",
    "streamlit>=1.36.0"
    , "plotly>=5.24.0"
]

[project.scripts]
aiops = "aiops.cli:main"

[tool.setuptools.packages.find]
include = ["aiops*"]
exclude = ["tests*", "data*"]


